  * Fixed an oversight that had always prevented annex.resolvemerge
    from being honored, when it was configured by git-annex config.
  * annex.largefiles can be configured by git-annex config,
    to more easily set a default that will also be used by clones,
    without needing to shoehorn the expression into the gitattributes file.
    The git config and gitattributes override that.

 -- Joey Hess <id@joeyh.name>  Wed, 18 Dec 2019 15:12:40 -0400

git-annex (7.20191218) upstream; urgency=medium

  * git-lfs: The url provided to initremote/enableremote will now be
    stored in the git-annex branch, allowing enableremote to be used without
    an url. initremote --sameas can be used to add additional urls.
  * git-lfs: When there's a git remote with an url that's known to be
    used for git-lfs, automatically enable the special remote.
  * sync, assistant: Pull and push from git-lfs remotes.
  * Fix bug that made bare repos be treated as non-bare when --git-dir
    was used.
  * inprogress: Support --key.
  * Sped up many git-annex commands that operate on many files, by 
    avoiding reserialization of keys.
    find is 7% faster; whereis is 3% faster; and git-annex get when
    all files are already present is 5% faster
  * Stop displaying rsync progress, and use git-annex's own progress display
    for local-to-local repo transfers.
  * benchmark: Changed --databases to take a parameter specifiying the size
    of the database to benchmark.
  * benchmark --databases: Display size of the populated database.
  * benchmark --databases: Improve the "addAssociatedFile (new)"
    benchmark to really add new values, not overwriting old values.
  * Windows: Fix handling of changes to time zone. (Used to work but was
    broken in version 7.20181031.)

 -- Joey Hess <id@joeyh.name>  Wed, 18 Dec 2019 13:53:51 -0400

git-annex (7.20191114) upstream; urgency=medium

  * Added annex.allowsign option.
  * Make --json-error-messages capture more errors,