@@ -11,6 +11,8 @@ git-annex (7.20191219) UNRELEASED; urgency=medium
     to more easily set a default that will also be used by clones,
     without needing to shoehorn the expression into the gitattributes file.
     The git config and gitattributes override that.
+  * git-annex-config --set/--unset: No longer change the local git config
+    setting, except for in the special case of annex.securehashesonly.
 
  -- Joey Hess <id@joeyh.name>  Wed, 18 Dec 2019 15:12:40 -0400
 
